[package]
name = "rust-prj"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
getrandom = "0.2.12"
async-std = "1.12.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
may_minihttp = "0.1.0"